feat: promote testing onboarding and communications
