# cmd/server/routes_merchant.go
@@ -34,7 +34,6 @@ func registerMerchantRoutes(r *gin.RouterGroup, h *handler.Handler) {
 	r.POST("/marcas/:brand_id/invitaciones", h.CreateInvitation)
 	r.POST("/marcas/:brand_id/invitaciones/:invitation_id/reenviar", h.ResendInvitation)
 	r.DELETE("/marcas/:brand_id/invitaciones/:invitation_id", h.RevokeInvitation)
-	r.POST("/invitaciones/:token/aceptar", h.AcceptInvitation)
 	r.GET("/marcas/:brand_id/personal", h.Staff)
 	r.GET("/marcas/:brand_id/personal/:membership_id", h.StaffMember)
 	r.PATCH("/marcas/:brand_id/personal/:membership_id", h.UpdateStaff)
